#=================================================================================================================
# Welcome to qcharts_2
#=================================================================================================================
set(prjname qcharts_2)
#=================================================================================================================
# Headers
#=================================================================================================================
file (GLOB dir_2_headers *.h *.hpp *.inl *.vert *.frag *.geom *.tes *.tcs)
SOURCE_GROUP("" FILES ${dir_2_headers})
set(all_headers ${dir_2_headers} )
#=================================================================================================================
# Sources
#=================================================================================================================
file (GLOB dir_3_sources *.cpp *.c *.qrc *.vert *.frag)
SOURCE_GROUP("" FILES ${dir_3_sources})
set(all_sources ${dir_3_sources} )
#=================================================================================================================
# Helper
#=================================================================================================================
set(all_helpers )
#=================================================================================================================
# User's Definitions
#=================================================================================================================
#=================================================================================================================
# Target Properties
#=================================================================================================================
add_executable(${prjname} ${all_headers} ${all_sources})
#=================================================================================================================
# Build Properties
#=================================================================================================================
set_target_properties(${prjname} PROPERTIES DEBUG_OUTPUT_NAME ${prjname}${DEBUG_TARGET_SUFFIX}${BUILD_ARCH_SUFFIX})
set_target_properties(${prjname} PROPERTIES RELEASE_OUTPUT_NAME ${prjname}${BUILD_ARCH_SUFFIX})
#=================================================================================================================
# Include - Current Project
#=================================================================================================================
include_directories(${PROJECTS_SRC_ROOT}/qcharts_2)
#=================================================================================================================
# Includes - 1st Party Dependencies
#=================================================================================================================
include_directories(${PROJECTS_SRC_ROOT}/daa_icd)
#=================================================================================================================
# Libraries - 1st Party Dependencies
#=================================================================================================================
target_link_libraries(${prjname} debug daa_datatypes_icd${DEBUG_TARGET_SUFFIX}${BUILD_ARCH_SUFFIX} optimized daa_datatypes_icd)
#=================================================================================================================
# External Libraries - 3rd Party Dependencies
#=================================================================================================================
#=================================================================================================================
# Link Snippet for QT
#=================================================================================================================
target_link_libraries(${prjname} Qt5::Gui Qt5::Widgets Qt5::Svg Qt5::PrintSupport)

 
#=================================================================================================================
# Link Snippet for QtCharts
#=================================================================================================================
target_link_libraries(${prjname} Qt5::Charts)

 
#=================================================================================================================
# Link Snippet for QtNetwork
#=================================================================================================================
target_link_libraries(${prjname} Qt5::Network)

 
